--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 			<h2 class="title">
 				What's up, <input type="text" id="name" placeholder="Name here" />
 			</h2>
+			<br>
+			<button id="logout">Logout</button>
 		</section>
 		<section class="create-todo">
 			<h3>CREATE A TODO</h3>
