--- a/login.html
+++ b/login.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-
             <div class="login">
                 <h1>Welcome</h1>
-                <form action="login.php" method="post">
-                    <input type="text" name="username" placeholder="Username" required="required" />
-                    <input type="password" name="password" placeholder="Password" required="required" />
-                    <button type="submit" class="Btn">Sign in</button>
-                </form>
+                <div>
+                    <input id="username" type="text" name="username" placeholder="Username" required="required" />
+                    <input id="password" type="password" name="password" placeholder="Password" required="required" />
+                    <button id="submitBtn" type="submit" class="Btn">Sign in</button>
+                </div>
             </div>
 </body>
+    <script src="./login.js"></script>
 </html>
